[package]
name = "ncda"
version = "0.1.0"
authors = ["Mathis EON <eon@abes.fr>"]
edition = "2018"
license = "MIT"
keywords = ["NCDA", "checksum", "id", "noid"]
category = ["wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ncda"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"]}
rocket = "0.4.6"
rocket_contrib = "0.4.6"
clap = "2.33.3"
serde_json = "1.0.61"

[dependencies.pyo3]
version = "0.13.1"
features = ["extension-module"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {version = "0.2.70"}
serde-wasm-bindgen = {version = "0.1.3"}
