[package]
authors = ["Mathis EON <eon@abes.fr>"]
edition = "2018"
keywords = ["NCDA", "checksum", "id", "noid"]
license = "MIT"
name = "ncda"
version = "0.1.0"
description = "Checks and computes the checksum char of a Noid with the NCDA (Noid Check Digit Algorithm) algorithm"
category = ["wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "ncda"

[profile.release]
lto = "fat"
opt-level = 3

[dependencies]
clap = "2.33.3"
glob = "0.3.0"
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.61"
tokio = {version = "1.1.1", features = ["fs", "full", "io-util"]}
futures = "0.3.12"

[dependencies.pyo3]
features = ["extension-module"]
version = "0.13.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = {version = "0.1.3"}
wasm-bindgen = {version = "0.2.70"}
